결과파싱에서 switch문추가.